# esd-lab

./: readme.md
lab_1/: .gitignore  CMakeLists.txt  kb.txt  makefile
lab_1/src/: dict.cpp  dict.h  graph_search.cpp  graph_search.h  graph_viz.cpp  graph_viz.h  main.cpp  node.h  rule.h  rule_printer.cpp  rule_printer.h
lab_1/tests/: dfs.cpp
lab_2/: CMakeLists.txt
lab_2/src/: dict.cpp  dict.h  graph_search.cpp  graph_search.h  graph_search_bfs.cpp  graph_search_bfs.h  graph_viz.cpp  graph_viz.h  main.cpp  node.h  rule.h  rule_printer.cpp  rule_printer.h
lab_2/tests/: bfs.cpp  dfs.cpp
lab_3/: kb.txt
lab_3/docs/: .gitignore  00-intro.tex  01-theoretical.tex  02-practical.tex  report.tex
lab_3/src/: dict.h  graph_search.cpp  graph_search.h  graph_viz.h  main.cpp
lab_4/: makefile
lab_4/docs/: .gitignore  00-intro.tex  02-practical.tex  04-conclusion.tex  report.tex
lab_5/: readme.md
lab_6/: database.txt  lec_example.txt  lec_example_trace.txt  lists.txt  makefile  maze.txt  nums.txt  pinguin.txt  sudoku.txt
lab_6/docs/: 02-practical.tex  04-conclusion.tex  diagrams.drawio  ex.drawio  report.tex
lab_6/tests/: allocator_tests.cpp  channel_tests.cpp  parser_tests.cpp  solver_tests.cpp
lab_7/: CMakeLists.txt  diagram.drawio  lists.txt  main.ipynb  max.txt  nums.txt  pinguin.txt
lab_7/docs/: 00-intro.tex  01-theoretical.tex  02-practical.tex  04-conclusion.tex
lab_7/src/app/: main.cpp
lab_7/src/core/: atom.cpp  atom.h  atom_hook.h  channel.h  database.cpp  database.h  mgraph_solver.cpp  mgraph_solver.h  name_allocator.h  parser.cpp  parser.h  prolog_solver.cpp  prolog_solver.h  rule.cpp  solver.cpp  solver.h  subst.cpp  subst.h  variable.cpp  variable.h
lab_7/tests/: channel_tests.cpp  hook_tests.cpp  solver_tests.cpp
lab_8/: main.ipynb  readme.md
lab_logic/: CMakeLists.txt
lab_logic/docs/: .$diagrams.drawio.bkp  00-intro.aux  00-intro.tex  02-practical.aux  (+9 more)
(+59 files in other folders)
